# libbitcoinkernel-workshop

./: .editorconfig  .gitignore  Containerfile  README-dev.md  README.md  flake.nix  pyproject.toml  students.md
.devcontainer/: devcontainer.json
.github/workflows/: devcontainer.yml
data/blocks-invalid/: 102-bad-merkle.hex  102-truncated.hex
data/blocks-main/: 102-fund-alice.hex
data/blocks-prefix/: 001.hex  002.hex  003.hex  004.hex  005.hex  006.hex  007.hex  008.hex  009.hex  010.hex  011.hex  012.hex  013.hex  014.hex  015.hex  016.hex  017.hex  018.hex  019.hex  020.hex  021.hex  022.hex  023.hex  024.hex  025.hex  026.hex  027.hex  028.hex  029.hex  030.hex  031.hex  032.hex  033.hex  034.hex  035.hex  036.hex  037.hex  038.hex  039.hex  040.hex  (+61 more)
data/meta/: 102-fund-alice.block.json  102-fund-alice.tx.json  103-alice-pays-bob.block.json  103-alice-pays-bob.tx.json  104-bob-pays-carol.block.json  104-bob-pays-carol.tx.json  block-hashes.json  prefix-hashes.json  txids.json
data/prevouts/: 103-input0-correct.json  103-input0-wrong-amount.json  103-input0-wrong-script.json
data/scenarios/: missing-prev.json  reorg.json
data/tx/: 102-fund-alice.hex  (+3 more)
kernel_lab/: __init__.py  callbacks.py  chainstate.py  cli.py  io.py  objects.py  pbk_compat.py  script.py  strings.py  tutorial.py
plans/: 00-workshop-devel.md  01-tutorial-command.md
scripts/: 00-start-regtest.sh  01-generate-assets.sh  02-mutate-assets.py  03-build-prevout-assets.py  04-validate-assets.py  99-clean.sh
tests/: test_assets.py  test_objects.py  test_scenarios.py  test_tutorial.py
(+7 files in other folders)
