[project]
name = "libbitcoinkernel-workshop"
version = "0.1.0"
description = "Solution code for a Python libbitcoinkernel workshop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "py-bitcoinkernel",
    "pytest>=8",
    "rich>=13",
]

[project.scripts]
kernel-lab = "kernel_lab.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kernel_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
